# caledonia

./: CHANGELOG.md  README.md  TODO.org  caledonia.opam  dune-project  flake.nix
emacs/: caledonia-evil.el  caledonia.el
lib/: calendar_dir.ml  calendar_dir.mli  collection.ml  collection.mli  date.ml  date.mli  dune  event.ml  event.mli  format.ml  format.mli  query.ml  query.mli  recur.ml  recur.mli  sexp.ml
test/: dune  test_calendar_dir.ml  test_date.ml  test_event.ml  test_query.ml  test_recur.ml
test/calendar/example/: event.ics  other-event.ics
test/calendar/recurrence/: 10_weekly_count10.ics  11_daily_until.ics  12_weekly_until.ics  13_weekly_monday_wednesday.ics  14_weekly_weekends.ics  15_monthly_specific_day.ics  16_monthly_second_monday.ics  17_monthly_last_day.ics  18_yearly_specific_date.ics  19_yearly_mothers_day.ics  1_daily.ics  20_complex_weekdays_months.ics  21_complex_multiple_monthdays.ics  22_with_exdate.ics  23_dst_transition.ics  24_long_interval.ics  25_leap_day.ics  26_weekly_wkst.ics  27_monthly_nth_weekday.ics  28_yearly_historical.ics  29_monthly_bymonth.ics  2_weekly.ics  30_fourth_weekday.ics  3_monthly.ics  4_yearly.ics  5_every_2_days.ics  6_every_3_weeks.ics  7_bimonthly.ics  8_biennial.ics  9_daily_count5.ics
