opam-version: "2.0"
version: "0.3.0"
maintainer: "Ryan Gibb <ryan@freumh.org"
authors: ["Ryan Gibb <ryan@freumh.org"]
homepage: "https://ryan.freumh.org/caledonia.html"
bug-reports: "https://github.com/RyanGibb/caledonia/issues"
dev-repo: "git+https://github.com/RyanGibb/caledonia.git"
license: "MIT"
synopsis: "Command-line calendar tool"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.4"}
  "icalendar" {= "dev"}
  "cmdliner" {>= "1.3.0"}
  "ptime" {>= "1.2"}
  "fmt" {>= "0.9.0"}
  "logs" {>= "0.7.0"}
  "re" {>= "1.12.0"}
  "yojson" {>= "2.2.2"}
  "uuidm" {>= "0.9.9"}
  "eio" {>= "0.12"}
  "eio_main" {>= "0.12"}
  "timere" {>= "0.8.0"}
  "timedesc" {>= "0.8.0"}
  "alcotest" {>= "1.8.0" & with-test}
]
pin-depends: [
  # https://github.com/robur-coop/icalendar/pull/13
  ["icalendar.dev" "git+https://github.com/robur-coop/icalendar#1ab8d3970295bc96dc651c53b25c7c9963a27f81"]
]
